--- a/styles/style.css
+++ b/styles/style.css
@@ -1,29 +1,54 @@
-* {margin:0;
-    padding:0;}
+*{
+	margin: 0;
+	padding: 0;
+}
 
-.clear {clear:both;}
+.clear{
+	clear: both;
+}
 
-html, body, .page {min-height: 100%!important;
-    height: 100%!important;}
+body{
 
-body>.page{height:auto;
-    min-height:99%;}
+}
 
-.page {padding:2%;}
+html, body, .page{
+	min-height: 100% !important;
+	height: 100% !important;
+}
 
-.col1, .col2, .col3 {width:32%;
-                     border: 1px solid red;}
+body > .page{
+	height: auto;
+	min-height: 99%;
+}
 
-.col1 .block {}
+.page{
+	padding: 2%;
+}
 
-.col1 .block:nth-of-type(1) {width:46%;
-                             border:1px solid green;}
+.col1, .col2, .col3{
+	width: 32%;
+	border: 1px solid red;
+}
 
-.col1 .block:nth-of-type(2) {width:46%;
-                             border:1px solid greenyellow;}
+.col1 .block{
+}
 
-.col1 .block:nth-last-of-type(3) {width:95%;
-                                  border:1px solid darkgreen;}
+.col1 .block:nth-of-type(1){
+	width: 46%;
+	border: 1px solid green;
+}
 
-.col1 .block:nth-last-of-type(4) {width:95%;
-                                  border:1px solid orangered;}
+.col1 .block:nth-of-type(2){
+	width: 46%;
+	border: 1px solid greenyellow;
+}
+
+.col1 .block:nth-last-of-type(3){
+	width: 95%;
+	border: 1px solid darkgreen;
+}
+
+.col1 .block:nth-last-of-type(4){
+	width: 95%;
+	border: 1px solid orangered;
+}
