--- a/styles/style.css
+++ b/styles/style.css
@@ -61,13 +61,13 @@ body > .page{
 
 }
 
-.col:nth-of-type(1) .block:nth-last-of-type(3){
+.col:nth-of-type(1) .block:nth-of-type(3){
 	width: 100%;
 	background: #008bbe;
 	border: 1px solid darkgreen;
 }
 
-.col:nth-of-type(1) .block:nth-last-of-type(4){
+.col:nth-of-type(1) .block:nth-of-type(4){
 	width: 100%;
 	/*background-image: url("../img/metro1/cassettiera.png");*/
 	border: 1px solid orangered;
