Как ты и рекомендовал, создал отдельный класс для блоков которые идут на половну ширины колонки, не сработало.

--- a/styles/style.css
+++ b/styles/style.css
@@ -32,14 +32,19 @@ body > .page{
 
 .col:nth-of-type(2){
 	margin-left: 1%;
+	margin-right: 1%;
 }
 
 .col:nth-of-type(3){
-	margin-left: 1%;
+
 }
 
 .block{
+	width: 100%;
+}
 
+.half{
+	width: 49%;
 }
 
 .text{
@@ -49,22 +54,43 @@ body > .page{
 	margin-left: 15px;
 }
 
+.quote{
+	font-family: 'Arial', sans-serif;
+	font-size: small;
+	font-style: italic;
+	color: #ffffff;
+}
+
 .col:nth-of-type(1) .block:nth-of-type(1){
 	width: 48%;
 	background: #00be02;
+}
 
+.col:nth-of-type(1) .block:nth-of-type(1) p{
+	padding: auto;
 }
 
 .col:nth-of-type(1) .block:nth-of-type(2){
 	width: 48%;
 	background: #8023e3;
+}
 
+.col:nth-of-type(1) .block:nth-of-type(2)p{
+	padding: auto;
 }
 
 .col:nth-of-type(1) .block:nth-of-type(3){
 	width: 100%;
 	background: #008bbe;
 	border: 1px solid darkgreen;
+}
+
+.col:nth-of-type(1) .block:nth-of-type(3)p.quote{
+	padding: 2%;
+}
+
+.col:nth-of-type(1) .block:nth-of-type(3)p sub{
+	float: right;
 }
 
 .col:nth-of-type(1) .block:nth-of-type(4){
@@ -78,17 +104,20 @@ body > .page{
 	background: #0d1e88;
 }
 
+.col:nth-of-type(2) .block:nth-of-type(1)p{
+	padding: auto;
+}
 .col:nth-of-type(2) .block:nth-of-type(2){
 	width: 46%;
 	background: #019add
 }
 
 .col:nth-of-type(2) .block:nth-of-type(3){
-	width: 95%;
+	width: 100%;
 }
 
 .col:nth-of-type(3) .block:nth-of-type(1){
-	width: 95%;
+	width: 100%;
 	background: #8223e3;
 }
 
