--- a/styles/style.css
+++ b/styles/style.css
@@ -99,6 +99,10 @@ body > .page{
 	border: 1px solid orangered;
 }
 
+.col:nth-of-type(1) .block:nth-of-type(4)img{
+	width: 100%;
+}
+
 .col:nth-of-type(2) .block:nth-of-type(1){
 	width: 46%;
 	background: #0d1e88;
