--- a/styles/style.css
+++ b/styles/style.css
@@ -121,26 +121,26 @@ body > .page{
 }
 
 .col:nth-of-type(3) .block:nth-of-type(1){
-	width: 100%;
+	width: 100%;/*Мужик, ты меня поражаешь. Зачем задавать каждому свою ширину?? оНА ЖЕ ОДИНАКОВАЯ! Тебе классы для чего даны*/
 	background: #8223e3;
 }
 
 .col:nth-of-type(3) .block:nth-of-type(2){
-	width: 46%;
+	width: 46%;/*Мужик, ты меня поражаешь. Зачем задавать каждому свою ширину?? оНА ЖЕ ОДИНАКОВАЯ! Тебе классы для чего даны*/
 	background: #ad193d;
 }
 
 .col:nth-of-type(3) .block:nth-of-type(3){
-	width: 46%;
+	width: 46%;/*Мужик, ты меня поражаешь. Зачем задавать каждому свою ширину?? оНА ЖЕ ОДИНАКОВАЯ! Тебе классы для чего даны*/
 	background: #fbca03;
 }
 
 .col:nth-of-type(3) .block:nth-of-type(4){
-	width: 46%;
+	width: 46%;/*Мужик, ты меня поражаешь. Зачем задавать каждому свою ширину?? оНА ЖЕ ОДИНАКОВАЯ! Тебе классы для чего даны*/
 	background: #f26e02;
 }
 
 .col:nth-of-type(3) .block:nth-of-type(5){
-	width: 46%;
+	width: 46%;/*Мужик, ты меня поражаешь. Зачем задавать каждому свою ширину?? оНА ЖЕ ОДИНАКОВАЯ! Тебе классы для чего даны*/
 	background: #d700e2;
 }
