--- a/styles/style.css
+++ b/styles/style.css
@@ -84,7 +84,7 @@ body{
 }
 
 .col:nth-of-type(1) .block:nth-of-type(1){
-	/*width: 48%;*/
+
 	background: #00be02;
 }
 
@@ -93,7 +93,6 @@ body{
 }
 
 .col:nth-of-type(1) .block:nth-of-type(2){
-	/*width: 48%;*/
 	background: #8023e3;
 }
 
@@ -110,17 +109,8 @@ body{
 	padding: 2%;
 }
 
-.col:nth-of-type(1) .block:nth-of-type(3)p sub{
+.col:nth-of-type(1) .block:nth-of-type(3)p sub{/*Серьезно? Для каждого блока свой стиль?*/
 	float: right;
-}
-
-.col:nth-of-type(1) .block:nth-of-type(4){
-	width: 100%;
-	/*background-image: url("../img/metro1/cassettiera.png");*/
-}
-
-.col:nth-of-type(1) .block:nth-of-type(4)img{
-	width: 100%;
 }
 
 .col:nth-of-type(2) .block:nth-of-type(1){
