--- a/styles/style.css
+++ b/styles/style.css
@@ -18,19 +18,7 @@ body > .page{
 }
 /*Установка 100% высоты*/
 
-body{
-	padding: 2%;
 
-	background: #06162f; /* Old browsers */
-	background: -moz-radial-gradient(center, ellipse cover,  #06162f 0%, #baaddb 0%, #4553ac 100%); /* FF3.6+ */
-	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#06162f), color-stop(0%,#baaddb), color-stop(100%,#4553ac)); /* Chrome,Safari4+ */
-	background: -webkit-radial-gradient(center, ellipse cover,  #06162f 0%,#baaddb 0%,#4553ac 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-radial-gradient(center, ellipse cover,  #06162f 0%,#baaddb 0%,#4553ac 100%); /* Opera 12+ */
-	background: -ms-radial-gradient(center, ellipse cover,  #06162f 0%,#baaddb 0%,#4553ac 100%); /* IE10+ */
-	background: radial-gradient(ellipse at center,  #06162f 0%,#baaddb 0%,#4553ac 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#06162f', endColorstr='#4553ac',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-
-}
 
 .cols-holder{
 	margin:0 auto;
@@ -74,6 +62,7 @@ body{
 	font-size: medium;
 	color: #ffffff;
 	margin-left: 15px;
+	height: 30%;
 }
 
 .quote{
@@ -83,67 +72,7 @@ body{
 	color: #ffffff;
 }
 
-.col:nth-of-type(1) .block:nth-of-type(1){
 
-	background: #00be02;
-}
-
-.col:nth-of-type(1) .block:nth-of-type(1) p{
-	padding: auto;
-}
-
-.col:nth-of-type(1) .block:nth-of-type(2){
-	background: #8023e3;
-}
-
-.col:nth-of-type(1) .block:nth-of-type(2)p{
-	padding: auto;
-}
-
-.col:nth-of-type(1) .block:nth-of-type(3){
-	width: 100%;
-	background: #008bbe;
-}
-
-.col:nth-of-type(1) .block:nth-of-type(3)p.quote{
-	padding: 2%;
-}
-
-.col:nth-of-type(1) .block:nth-of-type(3)p sub{/*Серьезно? Для каждого блока свой стиль?*/
-	float: right;
-}
-
-.col:nth-of-type(2) .block:nth-of-type(1){
-	background: #0d1e88;
-}
-
-.col:nth-of-type(2) .block:nth-of-type(1)p{
-	padding: auto;
-}
-
-.col:nth-of-type(2) .block:nth-of-type(2){
-	background: #019add
-}
-
-.col:nth-of-type(3) .block:nth-of-type(1){
-	background: #8223e3;
-}
-
-.col:nth-of-type(3) .block:nth-of-type(2){
-	background: #ad193d;
-}
-
-.col:nth-of-type(3) .block:nth-of-type(3){
-	background: #fbca03;
-}
-
-.col:nth-of-type(3) .block:nth-of-type(4){
-	background: #f26e02;
-}
-
-.col:nth-of-type(3) .block:nth-of-type(5){
-	background: #d700e2;
-}
 /*Блоки внутри колонок*/
 
 /*Служебные классы*/
@@ -154,7 +83,12 @@ body{
 .image{
 	display: block;
 	width:100%;
+	height: 70%;
+}
+
+.image100{
 	height: 100%;
+	width: 100%;
 }
 
 .half{
