Как ты и рекомендовал, создал отдельный класс для блоков которые идут на половну ширины колонки, не сработало.

--- a/styles/style.css
+++ b/styles/style.css
@@ -80,13 +80,13 @@ body > .page{
 	clear: both;
 }
 
-.image{
+.icon{
 	display: block;
 	width:100%;
 	height: 70%;
 }
 
-.image100{
+.image{
 	height: 100%;
 	width: 100%;
 }
