--- a/styles/metro1_style.css
+++ b/styles/metro1_style.css
@@ -59,6 +59,14 @@ body{
 	background: #8223e3;
 }
 
+.col:nth-of-type(3) .block:nth-of-type(1)p.icon{
+	font-family: 'Arial', sans-serif;
+	font-size: 11pt;
+	color: #ffd4e9;
+	padding-top: 10%;
+	padding-left: 30%;
+}
+
 .col:nth-of-type(3) .block:nth-of-type(2){
 	background: #ad193d;
 }
