--- a/styles/metro2_style.css
+++ b/styles/metro2_style.css
@@ -1,13 +1,18 @@
 body{
-	background: #c2bfba;
+	background: radial-gradient(circle at 50% 0%, #a29e92, #cbc8c3);
 }
 
 .col:nth-of-type(1) .block:nth-of-type(1){
-
+	background-image: url("./../img/metro2/123.png");
+	background-size: cover;
 }
 
 .col:nth-of-type(1) .block:nth-of-type(2){
 	background: #e01e38;
+}
+
+.col:nth-of-type(1) .block:nth-of-type(2)p.quote{
+	margin: 5%;
 }
 
 .col:nth-of-type(1) .block:nth-of-type(3){
@@ -45,3 +50,10 @@ body{
 .col:nth-of-type(3) .block:nth-of-type(5){
 	background: #273c67;
 }
+
+
+/*
+.col:nth-of-type(3) .block:nth-of-type(5)img{
+	margin-top: 5%;
+	padding-left: 5%;
+}  */
