--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,7 @@ body > .page{
 
 .text{
 	font-family: 'Arial', sans-serif;
-	font-size: medium;
+	font-size: 13pt;
 	color: #ffffff;
 	margin-left: 15px;
 	height: 30%;
@@ -67,11 +67,17 @@ body > .page{
 
 .quote{
 	font-family: 'Arial', sans-serif;
-	font-size: small;
+	font-size: 11pt;
+	padding: 5%;
+	line-height: 1.5;
 	font-style: italic;
 	color: #ffffff;
 }
 
+p.quote sub{
+	float: right;
+	padding-top: 5%;
+}
 
 /*Блоки внутри колонок*/
 
@@ -84,6 +90,11 @@ body > .page{
 	display: block;
 	width:100%;
 	height: 70%;
+}
+
+p.icon img{
+	padding-left: 30%;
+	padding-top: 15%;
 }
 
 .image{
