--- a/styles/metro2_style.css
+++ b/styles/metro2_style.css
@@ -52,8 +52,74 @@ body{
 }
 
 
-/*
-.col:nth-of-type(3) .block:nth-of-type(5)img{
-	margin-top: 5%;
+/* послежний блок 3-й колонки */
+
+.col:nth-of-type(3) .block:nth-of-type(5)p {
+	padding-top: 5%;
 	padding-left: 5%;
-}  */
+}
+
+.logo{
+	float: left;
+	padding-left: 10px;
+	padding-top: 10px;
+	display: inline;
+}
+
+.icon_logo{
+	float: left;
+}
+
+.name_company{
+	font-family: 'Arial', sans-serif;
+	font-size: 9pt;
+	font-weight: bold;
+	color: #ffffff;
+}
+
+.slogan_info{
+	font-family: 'Arial', sans-serif;
+	font-size: 9pt;
+	font-weight: bold;
+	color: #ffffff;
+	padding-top: 10px;
+
+}
+
+.slogan_info span{
+	float: right;
+	font-weight: normal;
+	padding-right: 10px;
+	padding-top: 10px;
+}
+.mail{
+	font-family: 'Arial', sans-serif;
+	font-size: 9pt;
+	font-weight: normal;
+	color: #ffffff;
+}
+
+.text_normal{
+	font-family: 'Arial', sans-serif;
+	font-size: 9pt;
+	font-weight: bold;
+	color: #ffffff;
+	margin-top: 8px;
+}
+
+.link a{
+	font-family: 'Arial', sans-serif;
+	font-size: 9pt;
+	font-weight: bold;
+	color: #8bb2db;
+	text-decoration: none;
+}
+
+
+.text_think{
+	font-family: 'Arial', sans-serif;
+	font-size: 9pt;
+	font-weight: normal;
+	color: #ffffff;
+
+}
