--- a/styles/metro2_style.css
+++ b/styles/metro2_style.css
@@ -82,8 +82,7 @@ body{
 	font-size: 9pt;
 	font-weight: bold;
 	color: #ffffff;
-	padding-top: 10px;
-
+	padding-left: 10px;
 }
 
 .slogan_info span{
