--- a/styles/metro2_style.css
+++ b/styles/metro2_style.css
@@ -75,6 +75,7 @@ body{
 	font-size: 9pt;
 	font-weight: bold;
 	color: #ffffff;
+	margin-left: 40px;
 }
 
 .slogan_info{
@@ -82,7 +83,7 @@ body{
 	font-size: 9pt;
 	font-weight: bold;
 	color: #ffffff;
-	padding-left: 10px;
+
 }
 
 .slogan_info span{
