--- a/styles/metro2_style.css
+++ b/styles/metro2_style.css
@@ -68,6 +68,7 @@ body{
 
 .icon_logo{
 	float: left;
+	margin-right: 1em;
 }
 
 .name_company{
@@ -75,7 +76,7 @@ body{
 	font-size: 9pt;
 	font-weight: bold;
 	color: #ffffff;
-	margin-left: 40px;
+
 }
 
 .slogan_info{
