--- a/styles/metro1_style.css
+++ b/styles/metro1_style.css
@@ -14,8 +14,9 @@ body{
 
 /* Блоки внутри колонок */
 .col:nth-of-type(1) .block:nth-of-type(1){
-
 	background: #00be02;
+	background-image: url("./../img/metro1/about.png");
+	background-position: center, center;
 }
 
 .col:nth-of-type(1) .block:nth-of-type(1) p{
