--- a/styles/metro1_style.css
+++ b/styles/metro1_style.css
@@ -16,19 +16,23 @@ body{
 .col:nth-of-type(1) .block:nth-of-type(1){
 	background: #00be02;
 	background-image: url("./../img/metro1/about.png");
-	background-position: center, center;
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .col:nth-of-type(1) .block:nth-of-type(1) p{
-	padding: auto;
+	/*padding: auto;*/
 }
 
 .col:nth-of-type(1) .block:nth-of-type(2){
 	background: #8023e3;
+	background-image: url("./../img/metro1/team.png");
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .col:nth-of-type(1) .block:nth-of-type(2)p{
-	padding: auto;
+	/*padding: auto;*/
 }
 
 .col:nth-of-type(1) .block:nth-of-type(3){
@@ -46,41 +50,81 @@ body{
 
 .col:nth-of-type(2) .block:nth-of-type(1){
 	background: #0d1e88;
+	background-image: url("./../img/metro1/contact.png");
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .col:nth-of-type(2) .block:nth-of-type(1)p{
-	padding: auto;
+
 }
 
 .col:nth-of-type(2) .block:nth-of-type(2){
-	background: #019add
+	background: #019add;
+	background-image: url("./../img/metro1/contact.png");
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .col:nth-of-type(3) .block:nth-of-type(1){
 	background: #8223e3;
 }
 
-.col:nth-of-type(3) .block:nth-of-type(1)p.icon{
+.col:nth-of-type(3) .block:nth-of-type(1)p.text1{
 	font-family: 'Arial', sans-serif;
-	font-size: 11pt;
-	color: #ffd4e9;
-	padding-top: 10%;
-	padding-left: 30%;
+	font-size: 13pt;
+	color: #ffffff;
+	margin-left: 15px;
+	position: relative;
+	top: 5em;
+	height: 30%;
 }
 
 .col:nth-of-type(3) .block:nth-of-type(2){
 	background: #ad193d;
+	background-image: url("./../img/metro1/portfolio.png");
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .col:nth-of-type(3) .block:nth-of-type(3){
 	background: #fbca03;
+	background-image: url("./../img/metro1/contact.png");
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .col:nth-of-type(3) .block:nth-of-type(4){
 	background: #f26e02;
+	background-image: url("./../img/metro1/blog.png");
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .col:nth-of-type(3) .block:nth-of-type(5){
 	background: #d700e2;
+	background-image: url("./../img/metro1/shop.png");
+	background-position: center;
+	background-repeat: no-repeat;
 }
 /* Блоки внутри колонок */
+
+.slogan{
+	font-family: 'Arial', sans-serif;
+	font-size: 11pt;
+	color: #ffd4e9;
+	padding-top: 5%;
+	padding-left: 12%;
+	position: relative;
+	background-repeat: no-repeat;
+}
+
+.text1{
+	font-family: 'Arial', sans-serif;
+	font-size: 13pt;
+	color: #ffffff;
+	margin-left: 15px;
+	position: relative;
+	top: 5em;
+	height: 30%;
+}
