--- a/styles/metro2_style.css
+++ b/styles/metro2_style.css
@@ -17,34 +17,58 @@ body{
 
 .col:nth-of-type(1) .block:nth-of-type(3){
 	background: #329ad7;
+	background-image: url("./../img/metro2/contact.png");
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .col:nth-of-type(1) .block:nth-of-type(4){
 	background: #c1392b;
+	background-image: url("./../img/metro2/services.png");
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .col:nth-of-type(2) .block:nth-of-type(2){
 	background: #296bcc;
+	background-image: url("./../img/metro2/facebook_page.png");
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .col:nth-of-type(2) .block:nth-of-type(3){
 	background: #1ba0e1;
+	background-image: url("./../img/metro2/twitter.png");
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .col:nth-of-type(3) .block:nth-of-type(1){
 	background: #f39c11;
+	background-image: url("./../img/metro2/about.png");
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .col:nth-of-type(3) .block:nth-of-type(2){
 	background: #16a086;
+	background-image: url("./../img/metro2/portfolio.png");
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .col:nth-of-type(3) .block:nth-of-type(3){
 	background: #8d44ad;
+	background-image: url("./../img/metro2/team.png");
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .col:nth-of-type(3) .block:nth-of-type(4){
 	background: #ad193d;
+	background-image: url("./../img/metro2/blog.png");
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .col:nth-of-type(3) .block:nth-of-type(5){
