--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,8 @@ body > .page{
 	width: 100%;
 	height: 33%;
 	float: left;
+	margin-top: 2px;
+
 }
 
 .text{
@@ -106,6 +108,7 @@ p.icon img{
 
 .half{
 	width: 50%;
+
 }
 
 .height66{
