На странице metro5 в третьей колонке, если картинки поставить бекграундом - не работает. В первой и второй колонках не корректно отображается. В принципе можно оставить как было, только разве что выставить для картинок другой класс, чтобы млегка поменять отступы. Для блоков третьей колонки, перебробывал несколько способов выставить границу, не отображается.

--- a/styles/metro5_style.css
+++ b/styles/metro5_style.css
@@ -9,7 +9,7 @@ body{
 	color: #ffffff;
 	margin-left: 15px;
 	position: relative;
-	top: 1em;
+	/*top: 1em;*/
 	height: 30%;
 }
 
@@ -35,11 +35,11 @@ body{
 	/*border: 1px solid black;*/
 }
 
-.colon:nth-of-type(2) .block{
+.colon:nth-of-type(2).block{
 	border: 1px solid #ffffff;
 }
 
-.colon:nth-of-type(1) .block{
+.colon:nth-of-type(1).block{
 	height: 24%;
 }
 
