--- a/styles/style.css
+++ b/styles/style.css
@@ -98,7 +98,7 @@ p.quote sub{
 }
 
 p.icon img{
-	padding-left: 30%;
+	padding-left: 40%;
 	padding-top: 15%;
 }
 
@@ -114,6 +114,11 @@ p.icon img{
 .half:nth-of-type(2n-1){
 	margin-right: 4%;
 }
+
+/*
+.col:nth-of-type(2) .half:nth-of-type(2){
+	margin-right: 2%;
+}*/
 
 .height66{
 	height: 66%;
