--- a/styles/metro1_style.css
+++ b/styles/metro1_style.css
@@ -92,6 +92,8 @@ body{
 	background-image: url("./../img/metro1/contact.png");
 	background-position: center;
 	background-repeat: no-repeat;
+	margin-right: 0;
+	float: right;
 }
 
 .col:nth-of-type(3) .block:nth-of-type(4){
@@ -106,6 +108,8 @@ body{
 	background-image: url("./../img/metro1/shop.png");
 	background-position: center;
 	background-repeat: no-repeat;
+	margin-right: 0;
+	float: right;
 }
 /* Блоки внутри колонок */
 
