--- a/styles/metro2_style.css
+++ b/styles/metro2_style.css
@@ -2,6 +2,8 @@ body{
 	background: radial-gradient(circle at 50% 0%, #a29e92, #cbc8c3);
 }
 
+
+
 .col:nth-of-type(1) .block:nth-of-type(1){
 	background-image: url("./../img/metro2/123.png");
 	background-size: cover;
@@ -41,6 +43,8 @@ body{
 	background-image: url("./../img/metro2/twitter.png");
 	background-position: center;
 	background-repeat: no-repeat;
+	margin-right: 0;
+	float: right;
 }
 
 .col:nth-of-type(3) .block:nth-of-type(1){
