--- a/styles/metro5_style.css
+++ b/styles/metro5_style.css
@@ -13,6 +13,10 @@ body{
 	height: 30%;
 }
 
+.border{
+	border: 1px ridge white;
+}
+
 .view_more{
 	font-family: 'Arial', sans-serif;
 	font-size: 13pt;
