--- a/styles/metro1_style.css
+++ b/styles/metro1_style.css
@@ -132,3 +132,28 @@ body{
 	top: 5em;
 	height: 30%;
 }
+
+/*  Adaptiv  */
+
+@media only screen and (max-width:980px){
+
+
+
+}
+
+@media only screen and (max-width:800px){
+
+
+
+}
+
+@media only screen and (max-width:640px){
+
+
+
+}
+
+@media only screen and (max-width:480px){
+
+
+}
