--- a/styles/metro2_style.css
+++ b/styles/metro2_style.css
@@ -149,3 +149,28 @@ body{
 	font-weight: normal;
 	color: #ffffff;
 }
+
+/*  Adaptiv  */
+
+@media only screen and (max-width:980px){
+
+
+
+}
+
+@media only screen and (max-width:800px){
+
+
+
+}
+
+@media only screen and (max-width:640px){
+
+
+
+}
+
+@media only screen and (max-width:480px){
+
+
+}
