--- a/styles/metro5_style.css
+++ b/styles/metro5_style.css
@@ -176,3 +176,27 @@ body{
 	height: auto;
 }
 
+/*  Adaptiv  */
+
+@media only screen and (max-width:980px){
+
+
+
+}
+
+@media only screen and (max-width:800px){
+
+
+
+}
+
+@media only screen and (max-width:640px){
+
+
+
+}
+
+@media only screen and (max-width:480px){
+
+
+}
