--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,28 @@ body > .page{
 }
 /*Установка 100% высоты*/
 
+.header{
+	width: 100%;
+	margin:0 auto;
+	max-width: 1100px;
+	position: relative;
+	top: 17%;
+}
 
+.Logo_metro{
+	float: left;
+}
+
+.Logo_text{
+	font-family: 'Arial', sans-serif;
+	font-size: 20pt;
+	color: #ffffff;
+}
+
+.search{
+	float: right;
+	margin-right: 0;
+}
 
 .cols-holder{
 	margin:0 auto;
