--- a/styles/metro5_style.css
+++ b/styles/metro5_style.css
@@ -3,6 +3,31 @@ body{
 
 }
 
+.text_heading{
+	width: 100%;
+	margin:0 auto;
+	max-width: 1100px;
+	position: relative;
+	top: 17%;
+}
+
+.welcome,
+.service,
+.about{
+	float: left;
+	font-family: 'Arial', sans-serif;
+	font-size: 18pt;
+	color: #ffffff;
+}
+
+.service{
+	margin-left: 55%;
+}
+
+.about{
+	margin-left: 77%;
+}
+
 .text_block_invisible{
 	font-family: 'Arial', sans-serif;
 	font-size: 13pt;
