--- a/styles/metro2_style.css
+++ b/styles/metro2_style.css
@@ -159,18 +159,81 @@ body{
 }
 
 @media only screen and (max-width:800px){
+	.col:nth-of-type(1),
+	.col:nth-of-type(2){
+		width: 49%;
+	}
 
+	.col:nth-of-type(3){
+		width: 100%;
+		padding-top: 2%;
+	}
+
+	.col:nth-of-type(3) .block{
+		margin: 1%;
+	}
+
+
+	.text_metro2{
+		top: 5em;
+	}
+
+	.slogan{
+		padding-top: 2%;
+		padding-left: 5%;
+	}
 
 
 }
 
 @media only screen and (max-width:640px){
+	.col{
+		width: 100%;
+	}
 
+	.text_metro2{
+		top: 5em;
+	}
+
+	p.quote sub{
+		padding-top: 0;
+	}
 
 
 }
 
 @media only screen and (max-width:480px){
+	.col:nth-of-type(1),
+	.col:nth-of-type(2),
+	.col:nth-of-type(3){
+		width: 100%;
+		padding: 2.5%;
+	}
+
+	.text_metro2{
+		top: 5em;
+	}
+
+	.quote{
+		padding: 4%;
+		line-height: 1.5;
+	}
+
+	/*.text_tweets{
+		top: 2.8em;
+	}*/
+
+}
+
+@media only screen and (max-width:400px){
+	.col{
+		width: 100%;
+	}
+
+
+	.text_metro2{
+		top: 5em;
+	}
 
 
 }
