--- a/styles/metro3_style.css
+++ b/styles/metro3_style.css
@@ -7,18 +7,73 @@
 }
 
 @media only screen and (max-width:800px){
+	.col:nth-of-type(1),
+	.col:nth-of-type(2){
+		width: 49%;
+	}
+
+	.col:nth-of-type(3){
+		width: 100%;
+		padding-top: 2%;
+	}
+
+	.col:nth-of-type(3) .block{
+		margin: 1%;
+	}
+
+
+	.text_metro2{
+		top: 5em;
+	}
+
+	.slogan{
+		padding-top: 2%;
+		padding-left: 5%;
+	}
 
 
 
 }
 
 @media only screen and (max-width:640px){
+	.col:nth-of-type(1),
+	.col:nth-of-type(2),
+	.col:nth-of-type(3){
+		width: 100%;
+	}
 
+	/*.col:nth-of-type(1) .block,
+	.col:nth-of-type(2) .block,
+	.col:nth-of-type(3) .block{
+		padding: 1%;
+	}*/
+
+	.text_metro2{
+		top: 5em;
+	}
+
+	p.quote sub{
+		padding-top: 3%;
+	}
 
 
 }
 
 @media only screen and (max-width:480px){
+	.col:nth-of-type(1),
+	.col:nth-of-type(2),
+	.col:nth-of-type(3){
+		width: 100%;
+		padding: 2.5%;
+	}
 
+	.text_metro2{
+		top: 7em;
+	}
+
+	.quote{
+		padding: 4%;
+		line-height: 1.5;
+	}
 
 }
