--- a/styles/metro5_style.css
+++ b/styles/metro5_style.css
@@ -1,48 +1,49 @@
+/*Обнуление*/
+*{
+	margin: 0;
+	padding: 0;
+}
+/*Обнуление*/
+
+
+/*Установка 100% высоты*/
+html, body, .page{
+	min-height: 100% !important;
+	height: 100% !important;
+}
+
+body > .page{
+	height: auto;
+
+}
+/*Установка 100% высоты*/
+
+
 body{
 	background-image: url("./../img/metro5/background.jpg");
 
 }
 
-ul{
-	float: left;
-	list-style: none;
-
-}
-
-ul li{
-	display: inline;
-	list-style: none;
-}
-
-.text_heading ul li{
-	list-style: none;
-}
-
-.text_heading{
-	width: 100%;
+.cols-holder{
 	margin:0 auto;
-	max-width: 1100px;
+	max-width: 1149px;
+	max-height: 492px;
 	position: relative;
-	/*top: 12%;*/
+	top:20%;
+	height:100%;
 }
 
-.welcome,
-.service,
-.about{
+.block_metro5{
+	width: 100%;
 	float: left;
-	font-family: 'Arial', sans-serif;
-	font-size: 17pt;
-	color: #ffffff;
-	font-weight: 200;
+	margin-bottom: 2%;
 }
 
-.service{
-	margin-left: 46%;
-}
-
-.about{
-	margin-left: 77%;
-	bottom: 7%;
+.block_name{
+	width: 100%;
+	height: 8%;
+	float: left;
+	margin-bottom: 2%;
 }
 
 .text_block_invisible{
@@ -87,7 +88,7 @@ ul li{
 	border: 1px solid #ffffff;
 }*/
 
-.colon:nth-of-type(1).block{
+.colon:nth-of-type(1).block_metro5{
 	height: 24%;
 }
 
@@ -106,7 +107,7 @@ ul li{
 }
 
 
-.colon:nth-of-type(1) .block:nth-of-type(1){
+.colon:nth-of-type(1) .block_metro5:nth-of-type(1){
 	background: #1bb194;
 	/*background-image: url("./../img/metro5/buy_template.png");
 	background-position: center;
@@ -114,21 +115,21 @@ ul li{
 
 }
 
-.colon:nth-of-type(1) .block:nth-of-type(2){
+.colon:nth-of-type(1) .block_metro5:nth-of-type(2){
 	background: #dd6a11;
 	/*background-image: url("./../img/metro5/about.png");
 	background-position: center;
 	background-repeat: no-repeat;*/
 }
 
-.colon:nth-of-type(1) .block:nth-of-type(3){
+.colon:nth-of-type(1) .block_metro5:nth-of-type(3){
 	background: #2e8cca;
 	/*background-image: url("./../img/metro5/portfolio.png");
 	background-position: center;
 	background-repeat: no-repeat;*/
 }
 
-.colon:nth-of-type(1) .block:nth-of-type(4){
+.colon:nth-of-type(1) .block_metro5:nth-of-type(4){
 	background: #954fb2;
 	/*background-image: url("./../img/metro5/contact.png");
 	background-position: center;
@@ -136,73 +137,73 @@ ul li{
 }
 
 
-.colon-width .block:nth-of-type(1){
+.colon-width .block_metro5:nth-of-type(1){
 	background: #2abc69;
 	/*background-image: url("./../img/metro5/features.png");
 	background-position: center;
 	background-repeat: no-repeat;*/
 }
 
-.colon-width .block:nth-of-type(2){
+.colon-width .bloc_metro5k:nth-of-type(2){
 
 }
 
-.colon-width .block:nth-of-type(3){
+.colon-width .block_metro5:nth-of-type(3){
 	background: #278ed3;
 	/*background-image: url("./../img/metro5/our_service.png");
 	background-position: center;
 	background-repeat: no-repeat;*/
 }
 
-.colon-width .block:nth-of-type(4){
+.colon-width .block_metro5:nth-of-type(4){
 	background: #14af8f;
 	/*background-image: url("./../img/metro5/blog.png");
 	background-position: center;
 	background-repeat: no-repeat;*/
 }
 
-.colon-width .block:nth-of-type(5){
+.colon-width .block_metro5:nth-of-type(5){
 
 }
 
-.colon-width .block:nth-of-type(6){
+.colon-width .block_metro5:nth-of-type(6){
 	background: #314357;
 }
 
-.colon-width .block:nth-of-type(6)h4{
+.colon-width .block_metro5:nth-of-type(6)h4{
 	color: #ffffff;
 }
 
-.colon-width .block:nth-of-type(6).footer span{
+.colon-width .block_metro5:nth-of-type(6).footer span{
 	color: #ffffff;
 	font-size: 10pt;
 	font-family: 'Arial', sans-serif;
 }
 
-.colon-width .block:nth-of-type(2n-1){
+.colon-width .block_metro5:nth-of-type(2n-1){
 	margin-right: 1%;
 }
 
-.colon:nth-of-type(2) .block:nth-of-type(1){
+.colon:nth-of-type(2) .block_metro5:nth-of-type(1){
 	/*background-image: url("./../img/metro5/windows.png");
 	background-position: center center;
 	background-repeat: no-repeat;*/
 	border: 1px ridge rgba(255, 255, 255, 0.2);
 }
 
-.colon:nth-of-type(2) .block:nth-of-type(2){
+.colon:nth-of-type(2) .block_metro5:nth-of-type(2){
 /*	background-image: url("./../img/metro5/photography.png");
 	background-position: center;
 	background-repeat: no-repeat; */
 }
 
-.colon:nth-of-type(2) .block:nth-of-type(3){
+.colon:nth-of-type(2) .block_metro5:nth-of-type(3){
 	/*background-image: url("./../img/metro5/design.png");
 	background-position: center;
 	background-repeat: no-repeat;*/
 }
 
-.colon:nth-of-type(2) .block:nth-of-type(4){
+.colon:nth-of-type(2) .block_metro5:nth-of-type(4){
 /*	background-image: url("./../img/metro5/motion.png");
 	background-position: center;
 	background-repeat: no-repeat; */
@@ -213,7 +214,7 @@ ul li{
 }
 
 
-.colon:nth-of-type(3) .block:nth-of-type(1) .height66 img{
+.colon:nth-of-type(3) .block_metro5:nth-of-type(1) .height66 img{
 	width: auto;
 	height: auto;
 }
