--- a/styles/metro5_style.css
+++ b/styles/metro5_style.css
@@ -46,6 +46,12 @@ body{
 	margin-bottom: 2%;
 }
 
+.block_name p{
+	font-family: 'Arial', sans-serif;
+	font-size: 15pt;
+	color: #ffffff;
+}
+
 .text_block_invisible{
 	font-family: 'Arial', sans-serif;
 	font-size: 13pt;
@@ -54,6 +60,17 @@ body{
 	position: relative;
 	/*top: 1em;*/
 	height: 30%;
+}
+
+.icon{
+	display: block;
+	width:100%;
+	height: 70%;
+}
+
+p.icon img{
+	padding-left: 40%;
+	padding-top: 15%;
 }
 
 .border{
@@ -90,6 +107,18 @@ body{
 
 .colon:nth-of-type(1).block_metro5{
 	height: 24%;
+}
+
+.colon-width.block_metro5{
+	height: 24%;
+}
+
+.colon:nth-of-type(2).block_metro5{
+	height: 24%;
+}
+
+.colon:nth-of-type(3).block_metro5{
+	height: 50%;
 }
 
 .one-of-third{
